--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -216,7 +216,7 @@
 
                         <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
                         <div class="adrct">
-                                <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address Công ty cổ phần Citygo số 434 trần khát Trân, Hai Bà </div>
+                                <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
                                 <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
 
                                 @if (!string.IsNullOrEmpty(commonInfo.Email))
