--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -7,7 +7,7 @@
     }
 
 }
-<div class="top-header">
+@*<div class="top-header">
     <div class="container">
         <div class="currency"><a href="tel:@commonInfo.HotLine">Click để gọi: @commonInfo.HotLine</a></div>
         <div class="top-bar-social">
@@ -23,7 +23,7 @@
             <a href="/home/contact">Hỗ trợ</a>
         </div>
     </div>
-</div>
+</div>*@
 <div class="container main-header">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-3 logo">
