--- a/06_Shop_Onepage/Views/Article/Category.cshtml
+++ b/06_Shop_Onepage/Views/Article/Category.cshtml
@@ -4,7 +4,7 @@
 }
     <div class="container section-padding" id="columns">
         <div class="breadcrumb clearfix">
-            <a class="home" href="#" title="Return to Home">Home</a>
+            <a class="home" href="/" title="Return to Home">Home</a>
             <span class="fa fa-caret-right">&nbsp;</span>
             <span class="navigation_page">Blog</span>
         </div>
