--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40 wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <img src="images/service_1.png" alt="pet">
+                        <img src="https://media.anpero.com/images/38/72018/32018071020081358.jpg" alt="pet" style="height:100px;">
                     </div>
                     <h2>Giải pháp</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
@@ -39,7 +39,7 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40 xs-bottom-40 wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <img src="images/service_2.png" alt="pet">
+                        <img src="https://media.anpero.com/images/38/72018/12018071020100629.png" alt="pet" style="height:100px;">
                     </div>
                     <h2>Con người</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
@@ -49,7 +49,7 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40  wow fadeIn">
                 <div class="single-service">
                     <div class="service-photo">
-                        <img src="images/service_3.png" alt="pet">
+                        <img src="https://media.anpero.com/images/38/72018/worm2018071020105847.png" alt="pet" style="height:100px;">
                     </div>
                     <h2>Công nghệ</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
@@ -167,10 +167,8 @@
                                     <h3><span>@Anpero.StringHelpper.ConvertTimeVN(item.CreateDate)</span></h3>
                                 </div>
                             </div>
-                            <h2>@Anpero.StringHelpper.SubString(30, item.Title)</h2>
-                            <p>@Anpero.StringHelpper.SubString(50, item.ShotDesc)</p>
-                            <a href="@Anpero.StringHelpper.GetArticleLink(item.Title, item.Id)">@Anpero.StringHelpper.SubString(30, item.Title)</a>
-                            <a href="@Anpero.StringHelpper.GetArticleLink(item.Title, item.Id)">Chi tiết</a>
+                            <h2>@Anpero.StringHelpper.SubString(38, item.Title)</h2>                                                        
+                            
                         </div>
                     </div>
 
