--- a/06_Shop_Onepage/Views/Product/List.cshtml
+++ b/06_Shop_Onepage/Views/Product/List.cshtml
@@ -206,7 +206,7 @@
                                 <li>Chỉnh sửa banner quảng cáo không giới hạn</li>
                                 <li>Báo cáo doanh thu theo từng chi nhánh, nhân viên bán hàng qua email, hoặc tài liệu</li>
                                 <li>Báo cáo các sản phẩm bán chạy nhất qua email, hoặc tài liệu</li>
-                                <li>Báo cáo các nguyền khách hàng, tỷ lệ khách hàng tới web ( từ tìm kiếm, tự nhiên, hay nguồn nào dẫn tới web)</li>
+                                <li>Báo cáo các nguồn khách hàng, tỷ lệ khách hàng tới web ( từ tìm kiếm, tự nhiên, hay nguồn nào dẫn tới web)</li>
                               
                             </ul>
                         </div>
