--- a/04_Shop_multiProduct/Views/Product/Checkout.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Checkout.cshtml
@@ -62,15 +62,15 @@
                 <div class="box-border">
                     <ul class="shipping_method">
                         <li style="display:none;">
-                            <label for="radio_button_3"><input type="radio" checked name="radio_3" id="radio_button_3" value="0" data-ship="0">Nhận sản phẩm tại cửa hàng</label>
+                            <label for="radio_button_3"><input type="radio" checked name="radio_3" id="radio_button_3" value="0" data-ship="0">Vận chuyển miễn phí nội thành</label>
                         </li>
 
                         <li>
-                            <label for="radio_button_4"><input type="radio" name="radio_3" id="radio_button_4" value="2" data-ship="25000"> Vận chuyển thường 25.000đ</label>
+                            <label for="radio_button_4"><input type="radio" name="radio_3" id="radio_button_4" value="2" data-ship="25000"> Vận chuyển thường 25.000đ / sản phẩm</label>
                         </li>
                         <li>
 
-                            <label for="radio_button_5"><input type="radio" name="radio_3" id="radio_button_5" value="1" data-ship="35000"> Vận chuyển nhanh 35.000đ</label>
+                            <label for="radio_button_5"><input type="radio" name="radio_3" id="radio_button_5" value="1" data-ship="35000"> Vận chuyển nhanh 35.000đ/ sản phẩm</label>
                         </li>
                     </ul>
                 </div>
@@ -79,9 +79,9 @@
                     <h3 class="checkout-sep">3. Phương thức thanh toán</h3>
                     <div class="box-border">
                         <ul class="shipping_method">
-                            <li style="display:none;" class="lb2">
-                                <p class="subcaption bold">Tại cửa hàng</p>
-                                <label for="radio_button_41"><input type="radio" checked name="radio_4" id="radio_button_41" value="0" data-ship="0">Miễn phí 0 đ</label>
+                            <li class="lb2">
+                                <p class="subcaption bold">Tại showroom</p>
+                                <label for="radio_button_41"><input type="radio" checked name="radio_4" id="radio_button_41" value="0" data-ship="0">Thanh toán tại Showroom</label>
                             </li>
                             <li class="lb2">
                                 <label for="radio_button_51"><input type="radio" name="radio_4" id="radio_button_51" value="4" data-ship="0"> Chuyển khoản 0đ</label>
