--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -83,26 +83,26 @@
                                                 if (commonInfo.MenuList[i].ChidMenu != null && commonInfo.MenuList[i].ChidMenu.Length > 0)
                                                 {
 
-                                        <li class="dropdown">
-                                            <a href="@commonInfo.MenuList[i].Link" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
-                                            <ul class="dropdown-menu container-fluid">
-                                                <li class="block-container">
-                                                    <ul class="block">
-                                                        @for (int j = 0; j < commonInfo.MenuList[i].ChidMenu.Length; j++)
+                                                    <li class="dropdown">
+                                                        <a href="@commonInfo.MenuList[i].Link" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
+                                                        <ul class="dropdown-menu container-fluid">
+                                                            <li class="block-container">
+                                                                <ul class="block">
+                                                                    @for (int j = 0; j < commonInfo.MenuList[i].ChidMenu.Length; j++)
 
                                                                     {
-                                                                    <li class="link_container"><a href="@commonInfo.MenuList[i].ChidMenu[j].Link">@commonInfo.MenuList[i].ChidMenu[j].Tittle</a></li>
+                                                                        <li class="link_container"><a href="@commonInfo.MenuList[i].ChidMenu[j].Link">@commonInfo.MenuList[i].ChidMenu[j].Tittle</a></li>
                                                                     }
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
+                                                                </ul>
+                                                            </li>
+                                                        </ul>
+                                                    </li>
                                                 }
                                                 else
                                                 {
-                                        <li>
-                                            <a href="@commonInfo.MenuList[i].Link">@commonInfo.MenuList[i].Tittle</a>
-                                        </li>
+                                                    <li>
+                                                        <a href="@commonInfo.MenuList[i].Link">@commonInfo.MenuList[i].Tittle</a>
+                                                    </li>
                                                 }
                                             }
                                         }
@@ -211,43 +211,43 @@
 
             <div id="introduce-box" class="row">
                 <div class="col-md-4">
-                    <div class="introduce-title">Liên hệ với chúng tôi</div>
+                    
                     <div class="address-box">
 
                         <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
                         <div class="adrct">
-                                <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
-                                <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
+                            <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
+                            <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
 
-                                @if (!string.IsNullOrEmpty(commonInfo.Email))
-                                {
-                                    <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
-                                }
+                            @if (!string.IsNullOrEmpty(commonInfo.Email))
+                            {
+                                <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
+                            }
 
-                                @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                                {
-                                    <div class="tit-name">Skype:</div>
+                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                            {
+                                <div class="tit-name">Skype:</div>
                                     <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
-                                }
+                            }
 
-                            </div>
+                        </div>
                         @{
 
-                             string thisUrl = System.Web.HttpContext.Current.Request.Url.ToString();
-                        <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
-                        <div class="social-link">
-                            @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                            string thisUrl = System.Web.HttpContext.Current.Request.Url.ToString();
+                            <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
+                            <div class="social-link">
+                                @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                 {
-                                <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                    <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
                                 }
-                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                @if (!string.IsNullOrEmpty(commonInfo.Skype))
                                 {
-                                <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                    <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
                                 }
-                            <a href="https://plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
-                            <a href="http://pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
-                            <a href="http://www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
-                        </div>
+                                <a href="https://plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
+                                <a href="http://pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
+                                <a href="http://www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+                            </div>
                         }
                     </div>
                 </div>
@@ -256,8 +256,8 @@
                         <div class="col-sm-12">
                             @*<div class="address-box" style="margin-top: 31px;">*@
 
-                                @*<a href="/"><img src="@commonInfo.Logo" alt="logo"></a>*@
-                                @*<div class="adrct">
+                            @*<a href="/"><img src="@commonInfo.Logo" alt="logo"></a>*@
+                            @*<div class="adrct">
                                     <div class="tit-contain"><i class=""></i> Bắc Kạn</div>
                                     <div class="tit-contain"><i class="fa fa-home"></i> Tạp hóa Tuyết Huân</div>
                                     <div class="tit-contain"><i class="fa fa-location-arrow"></i> số 33, tổ 11A, P Sông Cầu, Bắc Kạn</div>
@@ -279,13 +279,13 @@
                                 </div>*@
                             @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                                 {
-                                    <ul id="introduce-company" class="introduce-list">
-                                        @foreach (var item in commonInfo.ProductCategoryList)
+                            <ul id="introduce-company" class="introduce-list">
+                                @foreach (var item in commonInfo.ProductCategoryList)
                                         {
-                                            <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
+                                        <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
                                         }
 
-                                    </ul>
+                            </ul>
                                 }
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                     <div id="contact-box" style="text-align: right;">
                         @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                         {
-                        <div class="fb-page" data-tabs="messages" data-href="@Html.Raw(commonInfo.FaceBookLink)" data-width="500" data-height="300" data-hide-cover="false"></div>
+                            <div class="fb-page" data-tabs="messages" data-href="@Html.Raw(commonInfo.FaceBookLink)" data-width="500" data-height="300" data-hide-cover="false"></div>
                         }
                     </div>
                 </div>
@@ -316,6 +316,8 @@
                         <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
                         <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
                         <li><a href="/blog">Tin tức</a></li>
+                        <li><a href="/#contact">Liên hệ</a></li>
+                        
                     </ul>
                 </div>
                 <p class="text-center">Copyrights © 2017 @commonInfo.Name. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpero">Anpero.com</a></p>
@@ -337,7 +339,7 @@
         $(".tree-menu li span").mouseenter(function () {
             $(this).closest('li').children('ul').show();
         })
-     
+
     </script>
 </body>
 </html>
