--- a/06_Shop_Onepage/assets/css/ProductListStyle.css
+++ b/06_Shop_Onepage/assets/css/ProductListStyle.css
@@ -123,6 +123,21 @@
     display: block;
     padding-bottom: 25px;
 }
+button.button {
+    display: inline-block;
+    border: 0;
+    background: #fff;
+    padding: 8px 15px;
+    font-size: 12px;
+    text-align: center;
+    white-space: nowrap;
+    font-weight: normal;
+    border: 2px solid #eee;
+    -webkit-transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
+    -o-transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
+    transition: all 0.4s cubic-bezier(0.8, 0, 0, 1);
+    box-shadow: inset 0 0 0 0 #fff;
+}
 .products-list .product-image {
     float: left;
     width: 28%;
@@ -244,3 +259,32 @@ a {
     font-family: FontAwesome;
     font-size: 16px;
 }
+.products-list .product-name {
+    text-align: left;
+    margin: -8px 0 10px 0px;
+}
+.products-list  h2{
+    font-size: 20px;
+}
+
+.products-list .product-name a {
+    font-size: 14px;
+    color: #000;
+    font-weight: 700;
+    text-align: left;
+    font-family: "Montserrat", sans-serif;
+    text-transform: uppercase;
+}
+.products-list .desc .link-learn:hover {
+    text-decoration: underline;
+}
+.products-list .item a:hover {
+    color: #ed6663;
+}
+.products-list .desc .link-learn {
+    font-size: 13px;
+    font-weight: normal;
+    margin-top: 5px;
+    color: #88be4c;
+}
+
