--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -314,7 +314,7 @@
         @if (ViewData["FeatureArticle"] != null)
         {
             SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
-            <div class="row-blog">
+            <div class="row row-blog">
                 <div class="blog-list">
                     <h2 class="page-heading">
                         <span class="page-heading-title">Tin từ blog</span>
