--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -2794,7 +2794,7 @@ span.notify-right{
   text-transform: uppercase;
   padding-top: 11px;
   padding-bottom: 12px;
-  background-color: green;
+  background-color: #50b748;
   color: white;
   
   margin:0;
