Update search theme 04
Update search theme 04

--- a/04_Shop_multiProduct/Views/Product/Category.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Category.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using AnperoFrontend.Models;
+@model SearchModel
+    
 <div class="page-top">
     <div class="container">
      
@@ -234,6 +236,7 @@
     </div>
 </div>
 </div>
+
 @section scripts{
 
 <script src="/assets/lib/countdown/jquery.plugin.js"></script>
