--- a/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -66,7 +66,7 @@
                         </select>
                     </div>
                     <div class="form-action">
-                        <button class="btn btn-default form-control btn-search" type="submit">Tìm kiếm</button>
+                        <button class="btn btn-success form-control btn-search" type="submit">Tìm kiếm</button>
                     </div>
 
                 </form>
