--- a/04_Shop_multiProduct/Views/Product/Category.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Category.cshtml
@@ -115,10 +115,13 @@
                         }
                     }
                 </div>
+                @Html.Partial("product/_SearchBox")
                 @Html.Partial("product/_MenuAndAdsPartial")
             }
             else
             {
+          
+                    @Html.Partial("product/_SearchBox")
                 @Html.Partial("product/_MenuAndAdsPartial")
                 <div class="center_column col-xs-12 col-sm-9" >
                     <!-- view-product-list-->
